--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -12,6 +12,11 @@ body {
   padding: 0;
   background-color: #f4f4f5;
 }
+@layer utilities {
+  [data-state="checked"] [data-select-item-indicator] {
+    display: none;
+  }
+}
 
 @layer base {
   :root {
